# D14_MFC4_Music_Detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  experiment.ipynb  fingerprint.py  matcher.py  pyproject.toml  requirements.txt  toy_example.ipynb
app/: config.py  main.py
app/api/: routes.py  websocket.py
app/core/: buffer.py  fingerprint.py  matcher.py  streaming.py
app/db/: fingerprint_repo.py  redis.py
app/models/: response.py
app/services/: fingerprint_service.py  recognition_service.py
scripts/: check_db.py  client.py  create_samples.py  drop_tables.py  evaluate.py  evaluate_system.py  extract_metadata.py  fingerprint_songs.py  insert_songs.py  match_song.py  stream_audio.py  tune_params.py
