[project]
name = "music-detection"
version = "1.0.0"
description = "Shazam-style audio fingerprinting with Redis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "librosa>=0.11.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "redis>=5.0.0",
    "sounddevice>=0.4.6",
    "scipy>=1.12.0",
    "python-multipart>=0.0.9",
    "websocket-client>=1.7.0",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]

[project.scripts]
app-main = "app.main:main"
client   = "scripts.client:stream"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11" # Specify the target Python version
strict = true # Enables all optional error checking flags
warn_return_any = true # Warns when a function returns a value with type Any
warn_unused_configs = true # Warns about unused config sections
disallow_untyped_defs = true # Requires annotations for all function definitions
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true # Ensures that there are only effective type ignores

[[tool.mypy.overrides]]
module = [
    "sounddevice",
    "librosa",
    "librosa.*",
    "soundfile",
    "scipy",
    "scipy.*",
    "websocket",
    "uvicorn",
    "uvicorn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
follow_imports = "skip"
